# fits

./: Cargo.toml
.github/workflows/: rust.yml
examples/: block.fs  fibonacci.fs  fizzbuzz.fs  record.fs
fits/: Cargo.toml  README.md
fits-playground/: Cargo.toml  Trunk.toml  index.html  style.css
fits-playground/src/: main.rs
fits/examples/: block.fs  fib.lambda  fibonacci.fs  fits.fs  record.fs  type.fs
fits/src/: env.rs  expr.rs  lambda_calculus.rs  lib.rs  main.rs  parse2.rs  record.rs  statement.rs  typecheck.rs  value.rs
fits/tests/: tests.rs
src/: env.rs  expr.rs  lib.rs  main.rs  parse.rs  record.rs  statement.rs  typecheck.rs  value.rs
tests/: tests.rs
