[package]
name = "fits"
version = "0.1.0"
edition = "2021"
default-run = "fits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
nom = "7.1.3"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
